# CMA-Gateway-de-Dados

./: CMA_Gateway.db  README.md  REUNIÃO-30-01-2025  SETUP_CMA_GATEWAY.sh  Start_CMA_Gateway.sh  conf_rede.sh  config.ini  config.sh  configurador.sh  configurador_corrigido_integrado_final.sh  cookies  functions.py  main.py  mensagens_gateway.json  mensagens_gateway_formatadas.json  pyproject.toml  rabbitmq.py  read_configs-DELETAR.py  requirements.txt  scadalts.py  setup.sh  static_ip.sh  syslog_verify.sh
Scada-LTS/: 20241125_backup_scadalts.txt  Startup_systemd  json cadastro de sensor modbus 2.txt  json cadastro de sensor modbus.txt  json de Leitura API 2.txt  json de Leitura API.txt  json_project.txt
docs/: Cadastro no CMA Web para Gateway de dados.xlsx  Comandos de controle dos serviços.txt
scripts/: exec_reconcile.sh  install_activate_network.sh  install_timer_reconcile.sh  listar_leases.sh  static_ip_all.sh  syslog_verify.sh
src/: .env  CMA_Gateway.db  config.ini  cookies  functions.py  logger.py  main.py  models.py  rabbitmq.py  read_configs-DELETAR.py  rede.py  run.py  scadalts.py
tests/: CMA_Gateway.db  CmaToGateway.json  Import Datasource  Start_CMA_Gateway_final.sh  Start_CMA_Gateway_final_v2.sh  Start_CMA_Gateway_modificado.sh  cma_server_fake.py  consulta_xids_tabela.py  cookies  crud_gateway.py  general_tests.py  get_cookie_pointValue.py  get_value_scada_lts.py  getdata_from_scada.py  getdata_from_scada_2.py  import requests.py  new_cookie_scada_lts.py  parse_msg_rabbitmq.py  pytest.ini  read_rabbitmq_queue.py  reads_json_data_from_scada.py  (+12 more)
(+6 files in other folders)
